# pdf_parsing

./: README.md  presentation.html  presentation.md  pyproject.toml
data/outputs/: .gitignore
data/outputs/article/: camelot_table.csv  docling.md  docling_table.csv  marker.md  marker_table.csv
data/outputs/invoice/: docling.md  docling_table.csv  marker_table.csv
data/outputs/invoice/marker/: marker.md
data/outputs/scanned_table/: docling_qwen.md  docling_qwen_table.csv  docling_smol.md  docling_smol_table.csv
pdf_parsing/: logging_utils.py  parsing_examples.ipynb
