[project]
name = "pdf-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.8.1",
    "camelot-py[base]>=1.0.0",
    "docling>=2.37.0",
    "ipython>=9.3.0",
    "jupyter>=1.1.1",
    "marker-pdf>=1.7.5",
    "mlx-vlm>=0.1.27; sys_platform == 'darwin'",
]
